# codex-rail

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  old
.github/workflows/: release.yml
src/: attach.rs  autopilot.rs  distill.rs  guardian.rs  main.rs  process_tree.rs  progress.rs  protocol.rs  state.rs  ui.rs  update.rs  worker.rs
tests/: cockpit.py  demo_capture.py  distill_realcodex.py  fakecodex  fakecodex_prompt_tui  fakecodex_sleep  fakecodex_spawn_detached  fakecodex_startup_error  pty_screenshot.py  regress.py  requirements.txt
tests/fixtures/: rollout-2026-07-02T13-51-07-019f2161-87b9-76e2-b7d3-64edc6cda7d1.jsonl
