[package]
name = "codex-rail"
version = "0.1.0"
edition = "2021"
description = "A lightweight, non-invasive session rail for managing multiple Codex CLI processes."
license = "MIT"

[[bin]]
name = "rail"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
libc = "0.2"
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
